# RecokrOCRParser

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/recokr_ocr_parser/: __init__.py  cli.py  constants.py  normalizer.py  parser.py  pipeline.py  preprocessor.py  schema.py  validator.py
tests/: test_pipeline.py
