[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recokr-ocr-parser"
version = "0.1.0"
description = "OCR parsing utilities for recokr assignment"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
